# ai-trading-bot

./: .env.example  .gitignore  README.md  dev.sh  run-native.sh  run-web.sh  serve.sh
app-native/: README.md
app-native/icon-src/: icon.html
app-native/launcher/: launcher.applescript  launcher.sh
app-native/src-tauri/: Cargo.toml  tauri.conf.json
app-native/src-tauri/icons/: icon.icns
app-native/src-tauri/src/: lib.rs  main.rs
backend/: .gitignore  README.md  config.py  db.py  main.py  models.py  requirements.txt
backend-rs/: Cargo.toml  README.md
backend-rs/src/: alpaca.rs  backtest.rs  bots.rs  botworker.rs  chat.rs  config.rs  database.rs  db.rs  error.rs  indicators.rs  lib.rs  llm.rs  main.rs  options.rs  rag.rs  research.rs  risk.rs  signals.rs  state.rs  sync.rs  worker.rs
backend/routers/: app_knowledge.py  bots.py  chat.py  indicators_router.py  market.py  news.py  options.py  research.py  research_feed.py  risk.py  strategies.py  trading.py  watchlist.py
backend/services/: alpaca_service.py  app_knowledge.py  bots.py  chat.py  indicators.py  kimi.py  mock.py  options.py  realtime.py  research.py  research_worker.py  risk.py  signals.py  transcripts.py
deploy/: apache-sandbox.conf
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BacktestResults.tsx  BotEvaluation.tsx  BotSetup.tsx  CandleChart.tsx  ContractLabel.tsx  ErrorBoundary.tsx  KillSwitch.tsx  Layout.tsx  LeftRail.tsx  Markdown.tsx  PortfolioChart.tsx  Sparkline.tsx  TickerSearch.tsx  Toaster.tsx  TopBar.tsx  ui.tsx
(+30 files in other folders)
