[package]
name = "trading-backend-rs"
version = "1.0.0"
edition = "2021"

[lib]
name = "trading_backend_rs"
path = "src/lib.rs"

[[bin]]
name = "trading-backend-rs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "mysql", "sqlite", "chrono", "json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
futures = "0.3"
rust-embed = "8"
mime_guess = "2"
